[FIX] web: display correctly oe_read_only
Using the `oe_read_only` CSS class on a field who is in a x2m editable
list (so in a form view) will cause a positioning issue in the list.
Because of the class, the cell will have a `display: none` who will
create a gap.
Added a selector for `.o_field_x2many_list .oe_read_only` who will make
the cell still invisible and unclickable but with `display: table-cell`.

--- a/addons/web/static/src/scss/form_view.scss
+++ b/addons/web/static/src/scss/form_view.scss
@@ -128,6 +128,12 @@
             display: none!important;
         }
 
+        .o_field_x2many_list .oe_read_only {
+            display: table-cell!important;
+            opacity: 0;
+            pointer-events: none;
+        }
+
         .oe_title {
             max-width: map-get($container-max-widths, md) - (2 * $o-horizontal-padding);
         }
